{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 22,
  "lineage": "22b098cd-d37a-1892-6325-9d3c819d9b66",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:internet-gateway/igw-03ee9c018a5e0567c",
            "id": "igw-03ee9c018a5e0567c",
            "owner_id": "865749917919",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-todo-app-igw",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-igw",
              "Project": "devops-todo-app"
            },
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "igw-03ee9c018a5e0567c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:loadbalancer/app/devops-todo-app-alb/bddcf001c909b7ea",
            "arn_suffix": "app/devops-todo-app-alb/bddcf001c909b7ea",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "devops-todo-app-alb-940353155.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_prefix_for_ipv6_source_nat": "off",
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:865749917919:loadbalancer/app/devops-todo-app-alb/bddcf001c909b7ea",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "devops-todo-app-alb",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0fbdf099e9cd4456c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-04e90a9f4e0ef1a98"
              },
              {
                "subnet_id": "subnet-0dbbcc17fbfd2bfe3"
              }
            ],
            "subnets": [
              "subnet-04e90a9f4e0ef1a98",
              "subnet-0dbbcc17fbfd2bfe3"
            ],
            "tags": {
              "Name": "devops-todo-app-alb",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-alb",
              "Project": "devops-todo-app"
            },
            "vpc_id": "vpc-00cd5e39f598bca68",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:loadbalancer/app/devops-todo-app-alb/bddcf001c909b7ea"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:listener/app/devops-todo-app-alb/bddcf001c909b7ea/0511ca777989e3d9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:targetgroup/devops-todo-app-tg/ef6b1ae93bae2f16",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:865749917919:listener/app/devops-todo-app-alb/bddcf001c909b7ea/0511ca777989e3d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:loadbalancer/app/devops-todo-app-alb/bddcf001c909b7ea",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:listener/app/devops-todo-app-alb/bddcf001c909b7ea/0511ca777989e3d9"
          },
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public_1",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:targetgroup/devops-todo-app-tg/ef6b1ae93bae2f16",
            "arn_suffix": "targetgroup/devops-todo-app-tg/ef6b1ae93bae2f16",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/tasks",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:865749917919:targetgroup/devops-todo-app-tg/ef6b1ae93bae2f16",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "devops-todo-app-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:865749917919:targetgroup/devops-todo-app-tg/ef6b1ae93bae2f16"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:route-table/rtb-02a3072c68a3da22a",
            "id": "rtb-02a3072c68a3da22a",
            "owner_id": "865749917919",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03ee9c018a5e0567c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "devops-todo-app-rt",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-rt",
              "Project": "devops-todo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "rtb-02a3072c68a3da22a",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060fa6a3cdaa4d12d",
            "region": "us-east-1",
            "route_table_id": "rtb-02a3072c68a3da22a",
            "subnet_id": "subnet-04e90a9f4e0ef1a98"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "rtbassoc-060fa6a3cdaa4d12d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_1",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-086d5391f8b7b3420",
            "region": "us-east-1",
            "route_table_id": "rtb-02a3072c68a3da22a",
            "subnet_id": "subnet-0dbbcc17fbfd2bfe3"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "rtbassoc-086d5391f8b7b3420",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_2",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:security-group/sg-0fbdf099e9cd4456c",
            "description": "Security group for ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0fbdf099e9cd4456c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "devops-todo-app-alb-sg",
            "name_prefix": "",
            "owner_id": "865749917919",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-todo-app-alb-sg",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-alb-sg",
              "Project": "devops-todo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "sg-0fbdf099e9cd4456c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:security-group/sg-0cd7c8fa4e99b29ca",
            "description": "Security group for ECS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd7c8fa4e99b29ca",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0fbdf099e9cd4456c"
                ],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "devops-todo-app-ecs-sg",
            "name_prefix": "",
            "owner_id": "865749917919",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-todo-app-ecs-sg",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-ecs-sg",
              "Project": "devops-todo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "sg-0cd7c8fa4e99b29ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:security-group/sg-0102787fbef129c9c",
            "description": "Security group for RDS",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0102787fbef129c9c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0cd7c8fa4e99b29ca"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "devops-todo-app-rds-sg",
            "name_prefix": "",
            "owner_id": "865749917919",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "devops-todo-app-rds-sg",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-rds-sg",
              "Project": "devops-todo-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "sg-0102787fbef129c9c",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:subnet/subnet-04e90a9f4e0ef1a98",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04e90a9f4e0ef1a98",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865749917919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-todo-app-public-1",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-public-1",
              "Project": "devops-todo-app"
            },
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "subnet-04e90a9f4e0ef1a98",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:subnet/subnet-0dbbcc17fbfd2bfe3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dbbcc17fbfd2bfe3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "865749917919",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-todo-app-public-2",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-public-2",
              "Project": "devops-todo-app"
            },
            "vpc_id": "vpc-00cd5e39f598bca68"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "subnet-0dbbcc17fbfd2bfe3",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:865749917919:vpc/vpc-00cd5e39f598bca68",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b4a092dc78d144c5",
            "default_route_table_id": "rtb-0090fb1e9ecfe6381",
            "default_security_group_id": "sg-04034e36df6d9ffb9",
            "dhcp_options_id": "dopt-04f1d9726375d4fdf",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-00cd5e39f598bca68",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0090fb1e9ecfe6381",
            "owner_id": "865749917919",
            "region": "us-east-1",
            "tags": {
              "Name": "devops-todo-app-vpc",
              "Project": "devops-todo-app"
            },
            "tags_all": {
              "Name": "devops-todo-app-vpc",
              "Project": "devops-todo-app"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "865749917919",
            "id": "vpc-00cd5e39f598bca68",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}